# tide

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  PKGBUILD  PKGBUILD-git  README.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
src/tide/: __init__.py  api.py  app.py  audio_capture.py  audio_fx.py  auth.py  auth_spotify.py  browser_import.py  cache.py  config.py  discord_rpc.py  history.py  instrumental.py  layout.py  listenbrainz.py  lyric_tracker.py  lyrics_provider.py  mpris.py  player.py  queue.py  session.py  settings.py  theming.py  ui_sounds.py  updates.py
src/tide/layouts/classic/: layout.toml
src/tide/layouts/dj-deck/: layout.toml
src/tide/layouts/focused/: layout.toml
src/tide/layouts/walkman/: layout.toml
src/tide/playback/: __init__.py  base.py  librespot_backend.py  mpv_backend.py  prefetch.py
src/tide/sounds/: README.md
src/tide/sources/: __init__.py  _ytdlp.py  bandcamp.py  base.py  local.py  mixcloud.py  soundcloud.py  spotify.py  subsonic.py  ytmusic.py
src/tide/themes/adaptive/: theme.qss  theme.toml
src/tide/themes/ambient/: theme.toml
src/tide/themes/brutalist-mono/: theme.toml
src/tide/themes/catppuccin/: theme.toml
src/tide/themes/gruvbox/: theme.toml
src/tide/themes/nord/: theme.toml
src/tide/themes/paper/: theme.toml
src/tide/themes/rose-pine/: theme.toml
src/tide/themes/solarized-light/: theme.toml
src/tide/themes/synthwave/: theme.toml
src/tide/themes/terminal-green/: theme.toml
src/tide/ui/: adaptive.py  album.py  ambient.py  art_cache.py  artist.py  audio_fx_popover.py  audio_fx_view.py  card.py  central_bg.py  explore.py  history.py  library.py  lyrics.py  onboarding.py  settings.py  sleep_timer.py  source_panel.py  spotify_signin.py  subsonic_signin.py  toast.py  track_row.py  tray.py  variants.py  visualizer.py  widgets.py  window.py  wizard.py
tests/: test_adaptive_palette.py
